# agentic-starter-kit-python

./: .clinerules  .releaserc.json  Dockerfile  README.md  USER_INSTRUCTIONS.md  agentic-starter-kit-python.code-workspace  alembic.ini  copier.yml  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml  response.json
.github/workflows/: release.yml
agent/: README.md
agent/design/: deliverables.md  index.md  tech-stack.md
agent/implementation/: index.md  phase0-example.md  project-phases.md
agent/instructions/design/: overview.md
agent/memory/decisions/: index.md
agent/memory/progress/: index.md
agent/standards/: coding.md  index.md
app/: admin_routes.py  auth.py  auth_routes.py  database.py  main.py  models.py  roles.py  schemas.py  todo_routes.py
app/templates/: base.html  index.html
app/templates/admin/: dashboard.html  roles.html
migrations/: env.py
migrations/versions/: 3ad4540a4ed1_initial_migration.py
scripts/: run_migrations.py  setup_migrations.py
template/: .clinerules.jinja  README.md  USER_INSTRUCTIONS.md
template/agent/: README.md
template/agent/context/: constraints.md  goals.md
template/agent/history/: progress.md
template/agent/history/decisions/: TEMPLATE.md
template/app/: main.py.jinja
tests/: conftest.py  test_admin.py  test_auth.py  test_roles.py
